# exercitii-tap

./: CMakeLists.txt  README.md  mainwindow.cpp
CalculGrade/: mainwindow.h  mainwindow.ui
StivaGUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
tap StivaStatica/: StivaStatica.cpp  StivaStatica.h  main.cpp  tap StivaStatica.sln  tap StivaStatica.vcxproj  tap StivaStatica.vcxproj.filters
tap exGrade/: Header.h  main.cpp  tap exGrade.vcxproj  tap exGrade.vcxproj.filters  tap exgrade.cpp  tap lab1 exGrade.sln
tap lab1 ex1 fractie/: Header.h  fractie.cpp  main.cpp  tap lab1 ex1 fractie.vcxproj  tap lab2 ex1 fractie.sln
tap lab2 ex2 banca/: Header.h  banca.cpp  main.cpp  tap lab2 ex2 banca.sln  tap lab2 ex2 banca.vcxproj  tap lab2 ex2 banca.vcxproj.filters
tap lab3 ex1/: Source.cpp  header.h  main.cpp  tap lab3 ex1.sln  tap lab3 ex1.vcxproj  tap lab3 ex1.vcxproj.filters
tap lab3 ex3/: Header.h  Source.cpp  main.cpp  tap lab3 ex3.sln  tap lab3 ex3.vcxproj  tap lab3 ex3.vcxproj.filters
tap lab3 ex4/: Actor.cpp  Actor.h  Film.cpp  Film.h  main.cpp  tap lab3 ex4.sln  tap lab3 ex4.vcxproj  tap lab3 ex4.vcxproj.filters
tap lab4 ex1/: Header.h  fractie.cpp  main.cpp  tap lab4 ex1.sln  tap lab4 ex1.vcxproj  tap lab4 ex1.vcxproj.filters
tap lab4 ex3/: Header.h  main.cpp  matrice.cpp  tap lab4 ex3.sln  tap lab4 ex3.vcxproj  tap lab4 ex3.vcxproj.filters
tap lab5 ex1/: Header.h  Manager.cpp  Manager.h  angajat.cpp  main.cpp  tap lab5 ex1.sln  tap lab5 ex1.vcxproj  tap lab5 ex1.vcxproj.filters
tap lab5 ex3/: Stiva.cpp  StivaStatica.h  main.cpp  tap lab5 ex3.sln  tap lab5 ex3.vcxproj  tap lab5 ex3.vcxproj.filters
tap lab6 ex1/: Angajat.cpp  Angajat.h  Persoana.cpp  Persoana.h  Profesor.cpp  Profesor.h  Student.cpp  Student.h  main.cpp  tap lab6 ex1.sln  tap lab6 ex1.vcxproj  tap lab6 ex1.vcxproj.filters
tap lab7 ex1/: FTablou.cpp  FTablou.h  main.cpp  tap lab7 ex1.sln  tap lab7 ex1.vcxproj  tap lab7 ex1.vcxproj.filters
tap lab7 ex3/: TablouS.cpp  TablouS.h  main.cpp  tap lab7 ex3.sln  tap lab7 ex3.vcxproj  tap lab7 ex3.vcxproj.filters
tap lab8 ex1/: main.cpp  out.txt  tap lab8 ex1.sln  tap lab8 ex1.vcxproj  tap lab8 ex1.vcxproj.filters
tap lab8 ex2/: in.txt  main.cpp  tap lab8 ex2.sln  tap lab8 ex2.vcxproj  tap lab8 ex2.vcxproj.filters
tutorial10_splitters/: CMakeLists.txt  dialog.ui
tutorial11_QDir/: CMakeLists.txt  main.cpp
tutorial12_QFiles/: CMakeLists.txt  main.cpp
tutorial13_resource_files/: CMakeLists.txt  MyResources.qrc  main.cpp  tutorial13_resource_files_naq_NA.ts
tutorial14_QLabel_QTDesigner/: CMakeLists.txt  dialog.cpp  dialog.ui
tutorial15_QPushButton/: CMakeLists.txt  dialog.cpp  dialog.ui
tutorial16_QLineEdit/: CMakeLists.txt  dialog.cpp  dialog.ui
tutorial17_QCheckBox/: CMakeLists.txt  dialog.cpp  dialog.ui
tutorial18_QRadioButton/: CMakeLists.txt  dialog.cpp  dialog.ui
tutorial19_QComboBoxes/: CMakeLists.txt  dialog.cpp  dialog.ui
tutorial20_QListWidget/: CMakeLists.txt  dialog.cpp  dialog.ui
tutorial21_QTreeWidget/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
tutorial23_QActions/: CMakeLists.txt  MyRes.qrc  mainwindow.cpp  mainwindow.ui
tutorial24_QProgressBar_QSlider/: CMakeLists.txt  dialog.cpp  dialog.ui
tutorial25_QStatusBar/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
tutorial26_QMessageBox/: CMakeLists.txt  dialog.cpp  dialog.ui
tutorial27_QTimer/: CMakeLists.txt  main.cpp  mytimer.cpp  mytimer.h
tutorial28_QtThreadsP1/: CMakeLists.txt  main.cpp  mythread.cpp  mythread.h
tutorial2_hello/: CMakeLists.txt  main.cpp
tutorial31_QThread_with_GUI/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  mythread.cpp  mythread.h
tutorial33_QThreadP5_waiting/: CMakeLists.txt  main.cpp  mythread.cpp  mythread.h
tutorial35_QThreadP6/: CMakeLists.txt  main.cpp  myobject.cpp  (+1 more)
tutorial37_QListIterator_Navigating_QList/: CMakeLists.txt  main.cpp
tutorial38_QMutableListIterator/: CMakeLists.txt  main.cpp
(+224 files in other folders)
